Add realization getGenealogyVisualizeGraph rest
