# back/controller/src/main/java/genealogy/visualizer/controller/FamilyRevisionController.java
@@ -1,19 +1,16 @@
 package genealogy.visualizer.controller;
 
 import genealogy.visualizer.api.FamilyRevisionApi;
-import genealogy.visualizer.api.model.ArchiveWithFamilyRevision;
 import genealogy.visualizer.api.model.ArchiveWithFamilyRevisionList;
 import genealogy.visualizer.api.model.FamilyRevision;
+import genealogy.visualizer.api.model.FamilyRevisionErrorResponse;
 import genealogy.visualizer.api.model.FamilyRevisionFilter;
 import genealogy.visualizer.api.model.FamilyRevisionResponse;
 import genealogy.visualizer.api.model.FamilyRevisionSave;
 import genealogy.visualizer.service.family.revision.FamilyRevisionService;
-import genealogy.visualizer.service.util.record.ResponseRecord;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @RestController
 public class FamilyRevisionController implements FamilyRevisionApi {
@@ -32,47 +29,51 @@ public class FamilyRevisionController implements FamilyRevisionApi {
 
     @Override
     public ResponseEntity<FamilyRevisionResponse> getById(Long id) {
-        ResponseRecord<FamilyRevision> result = familyRevisionService.getById(id);
-        if (result == null || result.error() != null) {
-            return new ResponseEntity<>(result != null ? result.error() : null, HttpStatus.NOT_FOUND);
-        }
-        return ResponseEntity.ok(result.value());
+        FamilyRevisionResponse result = familyRevisionService.getById(id);
+        return switch (result) {
+            case FamilyRevision f -> ResponseEntity.ok().body(f);
+            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
+            default -> ResponseEntity.internalServerError().build();
+        };
     }
 
     @Override
     public ResponseEntity<FamilyRevisionResponse> save(FamilyRevisionSave familyRevisionSave) {
-        ResponseRecord<FamilyRevision> result = familyRevisionService.save(familyRevisionSave);
-        if (result == null || result.error() != null) {
-            return getErrorResponse(result);
-        }
-        return ResponseEntity.ok(result.value());
+        FamilyRevisionResponse result = familyRevisionService.save(familyRevisionSave);
+        return switch (result) {
+            case FamilyRevision f -> ResponseEntity.ok().body(f);
+            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
+            default -> ResponseEntity.internalServerError().build();
+        };
     }
 
     @Override
     public ResponseEntity<FamilyRevisionResponse> update(FamilyRevision familyRevision) {
-        ResponseRecord<FamilyRevision> result = familyRevisionService.update(familyRevision);
-        if (result == null || result.error() != null) {
-            return getErrorResponse(result);
-        }
-        return ResponseEntity.ok(result.value());
+        FamilyRevisionResponse result = familyRevisionService.update(familyRevision);
+        return switch (result) {
+            case FamilyRevision f -> ResponseEntity.ok().body(f);
+            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
+            default -> ResponseEntity.internalServerError().build();
+        };
     }
 
     @Override
     public ResponseEntity<FamilyRevisionResponse> getFamilyRevisionByNum(FamilyRevisionFilter familyRevisionFilter) {
-        ResponseRecord<List<ArchiveWithFamilyRevision>> result = familyRevisionService.getArchivesWithFamilyRevision(familyRevisionFilter);
-        if (result == null || result.error() != null) {
-            return getErrorResponse(result);
-        }
-        return ResponseEntity.ok(new ArchiveWithFamilyRevisionList().data(result.value()));
+        FamilyRevisionResponse result = familyRevisionService.getArchivesWithFamilyRevision(familyRevisionFilter);
+        return switch (result) {
+            case ArchiveWithFamilyRevisionList f -> ResponseEntity.ok().body(f);
+            case FamilyRevisionErrorResponse e -> getErrorResponse(e);
+            default -> ResponseEntity.internalServerError().build();
+        };
     }
 
-    private ResponseEntity<FamilyRevisionResponse> getErrorResponse(ResponseRecord<?> result) {
+    private ResponseEntity<FamilyRevisionResponse> getErrorResponse(FamilyRevisionErrorResponse result) {
         HttpStatus httpStatus = HttpStatus.BAD_REQUEST;
-        if (result == null || result.error() == null) {
+        if (result == null || result.getCode() == null) {
             return new ResponseEntity<>(null, httpStatus);
         }
-        httpStatus = HttpStatus.valueOf(result.error().getCode());
-        return new ResponseEntity<>(result.error(), httpStatus);
+        httpStatus = HttpStatus.valueOf(result.getCode());
+        return new ResponseEntity<>(result, httpStatus);
     }
 
 }
