# back/service/src/main/java/genealogy/visualizer/service/util/record/ResponseRecord.java
@@ -1,6 +1,0 @@
-package genealogy.visualizer.service.util.record;
-
-import genealogy.visualizer.api.model.ErrorResponse;
-
-public record ResponseRecord<T>(ErrorResponse error, T value) {
-}
